--- a/charts/cluster-scanner/values.yaml
+++ b/charts/cluster-scanner/values.yaml
@@ -19,6 +19,11 @@ global:
     # apiHost: ""
     # apiHost is used to manually set the Sysdig backend host
     # Must have the protocol (http:// or https://)
+  image:
+    # The pull secrets for Cluster Scanner
+    pullSecrets: []
+    # The pull policy for Cluster Scanner
+    pullPolicy: IfNotPresent
 
   # Set the logging level to use, useful for troubleshooting. Valid values,
   # sorted by increasing level of verbosity are: `PANIC`, `FATAL`, `ERROR`,
@@ -63,8 +68,6 @@ runtimeStatusIntegrator:
     # The image repository to use for pulling the Runtime Status Integrator
     # image
     repository: sysdig/runtime-status-integrator
-    # The Runtime Status Integrator image pull policy
-    pullPolicy: IfNotPresent
     tag: "0.4.2"
   # Params to manage leader election
   # Leader election is implemented leveraging the native capabilities of
@@ -131,8 +134,6 @@ imageSbomExtractor:
     registry: quay.io
     # The image repository to use for pulling the Image SBOM Extractor image
     repository: sysdig/image-sbom-extractor
-    # The Image SBOM Extractor image pull policy
-    pullPolicy: IfNotPresent
     tag: "0.4.2"
   ports:
     # The port to be used to expose prometheus metrics for the Image SBOM
@@ -189,8 +190,6 @@ imageSbomExtractor:
     #   sentinelAddress: ""
     #   ttl: "168h" # Default ttl is 7 days
 
-# The image pull secrets for Cluster Scanner
-imagePullSecrets: []
 # Chart name override
 nameOverride: ""
 # Chart full name override
