--- a/charts/registry-scanner/values.yaml
+++ b/charts/registry-scanner/values.yaml
@@ -68,16 +68,16 @@ config:
     include: []
     # The list of regular expressions.<br/>Images matching any of these expressions are excluded when scanning.
     exclude: []
-    # Based on its creation date, excludes images older than specified number of days.<br/>The maximum is 365 days.
+    # Based on its creation date, excludes images older than the specified number of days.<br/>The maximum is 365 days.
     maxAgeDays: 90
-    # Based on its creation date, newer ones take precedence, maximum number of tags to scan per repository.<br/>The maximum is 50.
+    # Based on its creation date, newer ones take precedence, the maximum number of tags to scan per repository.<br/>The maximum is 50.
     maxTagsPerRepository: 5
     # The number of repositories to scan per registry.<br/>The maximum is 10000.
     maxRepositoriesPerRegistry: 500
   scan:
     # Override the default image for the inline scanner job.
     inlineScanImage: ""
-    # The security context for Inline Scanner container.
+    # The security context for the Inline Scanner container.
     securityContext: {}
       # capabilities:
       #   drop:
@@ -86,7 +86,7 @@ config:
       # runAsNonRoot: true
       # runAsUser: 1000
     orchestrator:
-      # The Time to live (ttl) value for the orchestrator job. Provide empty value to accept the default.
+      # The Time to Live (ttl) value for the orchestrator job. Provide an empty value to accept the default.
       ttlSecondsAfterFinished: 3600
     jobs:
       # The ttl value for scanner worker jobs.
@@ -130,7 +130,7 @@ ssl:
       #     MMNlTAQ9fvdNOTzZntye0PQYR5SR13E=
       #     -----END CERTIFICATE-----
 
-# The additional labels to add to CronJob and Scanning Jobs. Custom labels to be added to kubernetes manifests of all the resources created.
+# The additional labels to add to CronJob and Scanning Jobs. The custom labels to be added to kubernetes manifests of all the resources created.
 customLabels: {}
 
 proxy:
@@ -148,7 +148,7 @@ image:
   registry: quay.io
   # The Sysdig Registry Scanner image repository.
   repository: sysdig/registry-scanner
-  # Registry Scanner image tag. If empty, default to appVersion in `Chart.yaml`.
+  # The Registry Scanner image tag. If empty, default to appVersion in `Chart.yaml`.
   tag:
   # The PullPolicy for Registry Scanner image.
   pullPolicy: Always
@@ -170,7 +170,7 @@ nameOverride: ""
 fullnameOverride: ""
 
 # Specify the name of a Kubernetes secret containing 'secureAPIToken', 'registryUser', and 'registryPassword' entries.
-# If you are using `ecr` as `registryType`, ensure that you add 'accessKeyId', 'secretAccessKey' and 'region' entries.
+# If you are using `ecr` as `registryType`, ensure that you add 'accessKeyId', 'secretAccessKey', and 'region' entries.
 existingSecretName: ""
 
 # Pod annotations for the Registry scanner.
