--- a/charts/cluster-scanner/values.yaml
+++ b/charts/cluster-scanner/values.yaml
@@ -19,6 +19,11 @@ global:
     # apiHost: ""
     # apiHost is used to manually set the Sysdig backend host
     # Must have the protocol (http:// or https://)
+  image:
+    # The pull secrets for Cluster Scanner
+    pullSecrets: []
+    # The pull policy for Cluster Scanner
+    pullPolicy: IfNotPresent
 
   # Set the logging level to use, useful for troubleshooting. Valid values,
   # sorted by increasing level of verbosity are: `PANIC`, `FATAL`, `ERROR`,
@@ -40,12 +45,12 @@ replicaCount: 2
 scannerMode: "local"
 
 # Optional parameter used to check the compatibility of cluster-scanner
-# component versions with respect to the onprem backend version.
+# component versions with the on-premised backend version.
 #
-# If you are running an on-prem version of Sysdig Backend make sure to set
-# this parameter with the version of Sysdig Backend you are using.
+# If you are running an on-prem version of the Sysdig backend, set
+# this parameter with the version of Sysdig backend you are using.
 #
-# E.g. if `onPremCompatibilityVersion=6.2`, we make sure that the image
+# E.g. if `onPremCompatibilityVersion=6.2`, we ensure that the image
 # tag is < 1.0.0 for both the Runtime Status Integrator and the Image SBOM
 # Extractor.
 onPremCompatibilityVersion: "6.2"
@@ -63,8 +68,6 @@ runtimeStatusIntegrator:
     # The image repository to use for pulling the Runtime Status Integrator
     # image
     repository: sysdig/runtime-status-integrator
-    # The Runtime Status Integrator image pull policy
-    pullPolicy: IfNotPresent
     tag: "0.4.2"
   # Params to manage leader election
   # Leader election is implemented leveraging the native capabilities of
@@ -131,8 +134,6 @@ imageSbomExtractor:
     registry: quay.io
     # The image repository to use for pulling the Image SBOM Extractor image
     repository: sysdig/image-sbom-extractor
-    # The Image SBOM Extractor image pull policy
-    pullPolicy: IfNotPresent
     tag: "0.4.2"
   ports:
     # The port to be used to expose prometheus metrics for the Image SBOM
@@ -189,8 +190,6 @@ imageSbomExtractor:
     #   sentinelAddress: ""
     #   ttl: "168h" # Default ttl is 7 days
 
-# The image pull secrets for Cluster Scanner
-imagePullSecrets: []
 # Chart name override
 nameOverride: ""
 # Chart full name override
