feat(cluster-scanner): init chart with minimal templates and configuration (#1056)
Co-authored-by: Michele Mangili <83061719+michele-mangili@users.noreply.github.com>
Co-authored-by: FedericoFeresini <65897118+FedericoFeresini@users.noreply.github.com>
Co-authored-by: Michele Mangili <michele.mangili@sysdig.com>

--- a/charts/sysdig-deploy/Chart.yaml
+++ b/charts/sysdig-deploy/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: sysdig-deploy
 description: A chart with various Sysdig components for Kubernetes
 type: application
-version: 1.9.7
+version: 1.10.0
 maintainers:
   - name: aroberts87
     email: adam.roberts@sysdig.com
@@ -26,9 +26,15 @@ dependencies:
   - name: node-analyzer
     # repository: https://charts.sysdig.com
     repository: file://../node-analyzer
-    version: ~1.9.1
+    version: ~1.9.2
     alias: nodeAnalyzer
     condition: nodeAnalyzer.enabled
+  - name: cluster-scanner
+    # repository: https://charts.sysdig.com
+    repository: file://../cluster-scanner
+    version: ~0.1.0
+    alias: clusterScanner
+    condition: clusterScanner.enabled
   - name: kspm-collector
     # repository: https://charts.sysdig.com
     repository: file://../kspm-collector
