--- a/charts/cluster-scanner/values.yaml
+++ b/charts/cluster-scanner/values.yaml
@@ -101,9 +101,6 @@ runtimeStatusIntegrator:
     # The port to be used for healthcheck probes for the Runtime Status
     # Integrator
     probes: 7000
-    # The port to be used for pprof by the Runtime Status Integrator. You must
-    # explicitly enable pprof with the `pprofEnabled` flag.
-    pprof: 6060
   resources:
     limits:
       # Runtime Status Integrator CPU limit per replica
@@ -115,10 +112,6 @@ runtimeStatusIntegrator:
       cpu: "350m"
       # Runtime Status Integrator Memory requests per replica
       memory: 350Mi
-
-  # Set to `true` to enable the `pprof` profiler for the Runtime Status Integrator.
-  # Used for debugging purposes. **DO NOT SET** to `true` in production.
-  pprofEnabled: false
 
   natsJS:
     # The username to be used in the NATS JetStream instance the Runtime Status
@@ -141,9 +134,6 @@ imageSbomExtractor:
     metrics: 25001
     # The port to be used for healthcheck probes for the Image SBOM Extractor
     probes: 7001
-    # The port to be used for pprof by the Image SBOM Extractor. You must
-    # explicitly enable pprof with the `pprofEnabled` flag.
-    pprof: 6061
   resources:
     limits:
       # Image SBOM Extractor CPU limit per replica
@@ -155,10 +145,6 @@ imageSbomExtractor:
       cpu: "150m"
       # Image SBOM Extractor Memory requests per replica
       memory: 350Mi
-
-  # Set to `true` to enable the `pprof` profiler for the Image Sbom Extractor.
-  # Used for debugging purposes. **DO NOT SET** to `true` in production.
-  pprofEnabled: false
 
   cache:
     # The type of cache to use.
@@ -228,7 +214,9 @@ securityContext: {}
 selectorLabels: {}
 
 # Set Cluster Scanner Node Selector
-nodeSelector: {}
+nodeSelector:
+  # Cluster Scanner is only supported on nodes with amd64 architecture
+  kubernetes.io/arch: amd64
 
 # Set Cluster Scanner scheduling tolerations
 tolerations: []
