Use sysdig.apiEndpoint to compute the NATS Url

--- a/charts/admission-controller/templates/webhook/configmap.yaml
+++ b/charts/admission-controller/templates/webhook/configmap.yaml
@@ -22,6 +22,6 @@ data:
   {{- if .Values.features.kspmAdmissionController}}
   SERVICE_PORT: "{{.Values.webhook.v2.container.port}}"
   CERT_LOCATION: /cert
-  EXTERNAL_NATS_URL: "wss://{{required "Nats URL is missing" .Values.webhook.v2.nats.url }}:443"
+  EXTERNAL_NATS_URL:  {{ include "admissionController.natsUrl" . }}
   NATS_INSECURE: "{{.Values.webhook.v2.nats.insecure}}"
   {{- end}}
