--- a/charts/agent/templates/configmap.yaml
+++ b/charts/agent/templates/configmap.yaml
@@ -26,6 +26,18 @@ data:
 {{- if .Values.global.sysdig.tags }}
     tags: {{ include "agent.tags" . }}
 {{- end }}
+{{- if or (.Values.proxy.httpProxy | default .Values.global.proxy.httpProxy) (.Values.proxy.httpsProxy | default .Values.global.proxy.httpsProxy) }}
+    proxy:
+      {{- if contains "https" (.Values.proxy.httpProxy | default .Values.global.proxy.httpProxy) }}
+      proxy_host: {{ .Values.proxy.httpProxy | default .Values.global.proxy.httpProxy | trimPrefix "https://" | splitList ":" | first }}
+      proxy_port: {{ .Values.proxy.httpProxy | default .Values.global.proxy.httpProxy | trimPrefix "https://" | splitList ":" | last }}
+      ssl: true
+      {{- else }}
+      proxy_host: {{ .Values.proxy.httpProxy | default .Values.global.proxy.httpProxy | trimPrefix "http://" | splitList ":" | first }}
+      proxy_port: {{ .Values.proxy.httpProxy | default .Values.global.proxy.httpProxy | trimPrefix "http://" | splitList ":" | last }}
+      ssl: false
+      {{- end }}
+{{- end }}
 {{/* add in the remaining items from sysdig.settings */}}
 {{- if .Values.sysdig.settings }}
   {{- toYaml .Values.sysdig.settings | trim | nindent 4 }}
