--- a/charts/agent/tests/delegated_agent_deployment_test.yaml
+++ b/charts/agent/tests/delegated_agent_deployment_test.yaml
@@ -350,6 +350,123 @@ tests:
       - templates/configmap-deployment.yaml
       - templates/configmap.yaml
 
+  - it: Test dragent global proxy settings
+    set:
+      delegatedAgentDeployment:
+        enabled: true
+      global:
+        proxy:
+          httpProxy: https://192.168.10.2:3128
+          httpsProxy: https://192.168.10.2:3128
+    asserts:
+      - matchRegex:
+          path: data["dragent.yaml"]
+          pattern: "proxy_host: 192.168.10.2"
+      - matchRegex:
+          path: data["dragent.yaml"]
+          pattern: "proxy_port: 3128"
+      - matchRegex:
+          path: data["dragent.yaml"]
+          pattern: "ssl: true"
+    templates:
+      - templates/configmap-deployment.yaml
+      - templates/configmap.yaml
+
+  - it: Test dragent global proxy settings without SSL
+    set:
+      delegatedAgentDeployment:
+        enabled: true
+      global:
+        proxy:
+          httpProxy: http://192.168.10.2:3128
+          httpsProxy: http://192.168.10.2:3128
+    asserts:
+      - matchRegex:
+          path: data["dragent.yaml"]
+          pattern: "proxy_host: 192.168.10.2"
+      - matchRegex:
+          path: data["dragent.yaml"]
+          pattern: "proxy_port: 3128"
+      - matchRegex:
+          path: data["dragent.yaml"]
+          pattern: "ssl: false"
+    templates:
+      - templates/configmap-deployment.yaml
+      - templates/configmap.yaml
+
+  - it: Test dragent proxy settings from sysdig.settings options and not from global settings
+    set:
+      delegatedAgentDeployment:
+        enabled: true
+      global:
+        proxy:
+          httpProxy: http://192.168.10.102:8080
+          httpsProxy: http://192.168.10.1022:8080
+      sysdig:
+        settings:
+          http_proxy:
+            proxy_host: 192.168.10.2
+            proxy_port: 3128
+            ssl: true
+    asserts:
+      - matchRegex:
+          path: data["dragent.yaml"]
+          pattern: "proxy_host: 192.168.10.2"
+      - matchRegex:
+          path: data["dragent.yaml"]
+          pattern: "proxy_port: 3128"
+      - matchRegex:
+          path: data["dragent.yaml"]
+          pattern: "ssl: true"
+      - notMatchRegex:
+          path: data["dragent.yaml"]
+          pattern: "proxy_host: 192.168.10.102"
+      - notMatchRegex:
+          path: data["dragent.yaml"]
+          pattern: "proxy_port: 8080"
+      - notMatchRegex:
+          path: data["dragent.yaml"]
+          pattern: "ssl: false"
+    templates:
+      - templates/configmap-deployment.yaml
+      - templates/configmap.yaml
+
+  - it: Test dragent proxy settings from sysdig.settings options and not from local settings
+    set:
+      delegatedAgentDeployment:
+        enabled: true
+      proxy:
+        httpProxy: http://192.168.10.102:8080
+        httpsProxy: http://192.168.10.1022:8080
+      sysdig:
+        settings:
+          http_proxy:
+            proxy_host: 192.168.10.2
+            proxy_port: 3128
+            ssl: true
+    asserts:
+      - matchRegex:
+          path: data["dragent.yaml"]
+          pattern: "proxy_host: 192.168.10.2"
+      - matchRegex:
+          path: data["dragent.yaml"]
+          pattern: "proxy_port: 3128"
+      - matchRegex:
+          path: data["dragent.yaml"]
+          pattern: "ssl: true"
+      - notMatchRegex:
+          path: data["dragent.yaml"]
+          pattern: "proxy_host: 192.168.10.102"
+      - notMatchRegex:
+          path: data["dragent.yaml"]
+          pattern: "proxy_port: 8080"
+      - notMatchRegex:
+          path: data["dragent.yaml"]
+          pattern: "ssl: false"
+    templates:
+      - templates/configmap-deployment.yaml
+      - templates/configmap.yaml
+
   - it: Check Deployment and Daemonset labels
     set:
       delegatedAgentDeployment:
