--- a/charts/agent/templates/configmap.yaml
+++ b/charts/agent/templates/configmap.yaml
@@ -27,7 +27,7 @@ data:
     tags: {{ include "agent.tags" . }}
 {{- end }}
 {{- if and (or (.Values.proxy.httpProxy | default .Values.global.proxy.httpProxy) (.Values.proxy.httpsProxy | default .Values.global.proxy.httpsProxy)) (not .Values.sysdig.settings.http_proxy) }}
-    proxy:
+    http_proxy:
       {{- if contains "https" (.Values.proxy.httpProxy | default .Values.global.proxy.httpProxy) }}
       proxy_host: {{ .Values.proxy.httpProxy | default .Values.global.proxy.httpProxy | trimPrefix "https://" | splitList ":" | first }}
       proxy_port: {{ .Values.proxy.httpProxy | default .Values.global.proxy.httpProxy | trimPrefix "https://" | splitList ":" | last }}
