--- a/charts/cloud-connector/values.yaml
+++ b/charts/cloud-connector/values.yaml
@@ -2,31 +2,31 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-# Amount of replicas for Cloud Connector
+# The number of replicas for the Cloud Connector.
 replicaCount: 1
 
 image:
-  # The image repository to pull from.
+  # Sets the image repository to pull from.
   repository: quay.io/sysdig/cloud-connector
-  # The image pull policy.
+  # Sets the image pull policy.
   pullPolicy: IfNotPresent
-  # The image tag (immutable tags are recommended). Overrides the image tag whose default is the chart appVersion.
+  # Sets the image tag. Immutable tags are recommended. Overrides the image tag whose default is the chart appVersion.
   tag:
 
-# The image pull secrets
+# Specifies the image pull secrets.
 imagePullSecrets: []
-# Chart name override
+# Specifies the chart name override.
 nameOverride: ""
-# Chart full name override
+# Specifies the chart full name override.
 fullnameOverride: ""
 
 serviceAccount:
-  # Create the service account
+  # Creates the service account.
   create: true
-  # Extra annotations for serviceAccount
+  # Specifies the additional annotations for serviceAccount.
   annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
+  # Sets the name of the service account to use.
+  # If not set and create is `true`, a name is generated using the fullname template.
   name: ""
 
 # Pod annotations
@@ -35,10 +35,10 @@ podAnnotations:  # +doc-gen:break
   prometheus.io/path: "/metrics"
   prometheus.io/port: "5000"
 
-# Configure deployment PSP's
+# Enables deployment PSPs.
 podSecurityContext: {}
 
-# Configure securityContext
+# Enables securityContext.
 securityContext:  # +doc-gen:break
   capabilities:
     drop:
@@ -47,29 +47,29 @@ securityContext:  # +doc-gen:break
   runAsNonRoot: true
 
 service:
-  # Use this type as service
+  # Uses this type as a service.
   type: ClusterIP
-  # Configure port for the service
+  # Enables the port for the service.
   port: 80
-  # Additional labels to specify for the service
+  # Specifies the additional labels for the service.
   labels: {}
 
-# Configure resource requests and limits
+# Enables resource requests and limits.
 resources: {}
 
-# Configure nodeSelector for scheduling
+# Enables nodeSelector for scheduling.
 nodeSelector: {}
 
-# Tolerations for scheduling
+# Sets tolerations for scheduling.
 tolerations: []
 
-# Configure affinity rules
+# Enables affinity rules.
 affinity: {}
 
-# Configure deployment source for inner telemetry
+# Enables deployment source for inner telemetry.
 telemetryDeploymentMethod: "helm"
 
-# Extra environment variables to be set
+# Specifies additional environment variables to be set.
 extraEnvVars: []
 #   - name: HTTP_PROXY
 #     value: http://user:password@host:port/
@@ -82,54 +82,54 @@ extraEnvVars: []
 ## Secret values
 
 aws:
-  # AWS Credentials AccessKeyID
+  # Specifies the AWS Credentials AccessKeyID.
   accessKeyId: ""
-  # AWS Credentials: SecretAccessKey
+  # Specifies the AWS Credentials: `SecretAccessKey`.
   secretAccessKey: ""
-  # AWS Region
+  # Specifies the AWS Region.
   region: ""
 
-# GCP Credentials JSON
+# Specifies the GCP credentials in JSON.
 gcpCredentials: ""
 
 azure:
-  # Azure EventHub Connection String
+  # Specifies the Azure EventHub connection string.
   eventHubConnectionString: ""
-  # Azure Event Grid EventHub Connection String
+  # Specifies the Azure Event Grid EventHub connection string.
   eventGridEventHubConnectionString: ""
-  # Azure service principal tenant id
+  # Specifies the Azure service principal tenant ID.
   tenantId: ""
-  # Azure service principal client id
+  # Specifies the Azure service principal client ID.
   clientId: ""
-  # Azure service principal client secret
+  # Specifies the Azure service principal client secret.
   clientSecret: ""
-  # Azure region
+  # Specifies the Azure region.
   region: ""
 
 sysdig:
-  # Sysdig Secure URL
+  # Specifies the Sysdig Secure URL.
   url: "https://secure.sysdig.com"
-  # API Token to access Sysdig Secure
+  # Specifies the API Token to access Sysdig Secure.
   secureAPIToken: ""
-  # Verify SSL certificate
+  # Verifies the SSL certificate.
   verifySSL: true
 
-# Provide an existing secret name (see details in 'templates/secret.yaml') for the entries it uses.
+# Provides an existing secret name for the entries it uses. See `templates/secret.yaml` for more information.
 existingSecretName: ""
 
-# Rules Section for Cloud Connector
+# Specifies the Rules Section for Cloud Connector.
 rules: []
 
-# Thread-Detection event ingestion configuration ([config](#ingestors))
+# Specifies configuration for the threat detection event ingestion. See [ingestors](#ingestors) for more information.
 ingestors: []
 
-# Scanning capabilities configuration ([config](#scanners))
+# Specifies configuration for scanning capabilities. See [scanners](#scanners) for more information.
 scanners: []
 
 bruteForceDetection:
-  # Enable Brute Force detection
+  # Enables Brute Force detection.
   enabled: true
-  # Time window for a bruteforce attack try
+  # Specifies a time window for a bruteforce attack try.
   duration: 24h
-  # Maximum number of tries for given time window
+  # Specifies the maximum number of tries for a given time window.
   maximumTries: 10
