--- a/charts/admission-controller/templates/webhook/deployment.yaml
+++ b/charts/admission-controller/templates/webhook/deployment.yaml
@@ -50,11 +50,11 @@ spec:
       {{- end }}
       containers:
       {{- if .Values.features.kspmAdmissionController}}
-        - name: {{.Values.webhook.v2.container.name}}
-          image: {{ .Values.webhook.v2.container.image }}
+        - name: kspm-admission-controller
+          image: {{ .Values.webhook.v2.image }}
           env:
             - name: DRY_RUN
-              value: "{{.Values.webhook.v2.dryRun}}"
+              value: "true"
             {{- if (or (include "webhook.httpProxy" .) (include "webhook.httpsProxy" .) (include "webhook.noProxy" .) )}}
             - name: HTTP_PROXY
               value: {{ include "webhook.httpProxy" . }}
