--- a/charts/admission-controller/Chart.yaml
+++ b/charts/admission-controller/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: admission-controller
 description: Sysdig Admission Controller using Sysdig Secure inline image scanner
 type: application
-version: 0.11.2
+version: 0.12.0
 appVersion: 3.9.22
 home: https://sysdiglabs.github.io/admission-controller/
 icon: https://avatars.githubusercontent.com/u/5068817?s=200&v=4
@@ -17,6 +17,8 @@ maintainers:
     email: miguel.baztan@sysdig.com
   - name: jprieto92
     email: javier.prieto@sysdig.com
+  - name: airadier
+    email: alvaro.iradier@sysdig.com
 dependencies:
   - name: common
     # repository: https://charts.sysdig.com
