feat(agent): decouple agent priorityclass creation from gke autopilot
The agent chart has had the ability to create a PriorityClass for the agent
when requested for a while, but had two major deficiencies.

* The PriorityClass creation would only occur on GKE Autopilot environments
* The PriorityClass value was statically set

This change addresses both of those concerns so that the chart's behavior in
regard to PriorityClasses is more consistent and in line with user expectations

--- a/charts/agent/templates/priorityclass.yaml
+++ b/charts/agent/templates/priorityclass.yaml
@@ -1,12 +1,12 @@
-{{- if and (include "agent.gke.autopilot" .) .Values.gke.createPriorityClass }}
+{{- if or .Values.createPriorityClass .Values.gke.createPriorityClass }}
 apiVersion: scheduling.k8s.io/v1
 kind: PriorityClass
 metadata:
-{{- if and .Values.gke.createPriorityClass (not .Values.priorityClassName) }}
+{{- if and (or .Values.gke.createPriorityClass .Values.createPriorityClass) (not .Values.priorityClassName) }}
   {{ $_ := set .Values "priorityClassName" "sysdig-daemonset-priority" }}
 {{- end }}
   name: {{ .Values.priorityClassName }}
-value: 10
+value: {{ .Values.priorityClassValue }}
 preemptionPolicy: PreemptLowerPriority
 globalDefault: false
 description: "Sysdig DaemonSet priority"
