fix(cluster-scanner): corrected role to support OKD4

--- a/charts/cluster-scanner/templates/role.yaml
+++ b/charts/cluster-scanner/templates/role.yaml
@@ -21,6 +21,8 @@ rules:
 - apiGroups: ["*"]
   resources:
     - "endpoints"
+    # Following is required for OpenShift. See https://docs.openshift.com/container-platform/3.11/architecture/core_concepts/pods_and_services.html#endpoints
+    - "endpoints/restricted"
   resourceNames:
     - {{ include "cluster-scanner.fullname" . }}
   verbs: ["*"]
