feature(agent): add support for Universal eBPF

--- a/charts/agent/templates/daemonset.yaml
+++ b/charts/agent/templates/daemonset.yaml
@@ -77,7 +77,8 @@ spec:
       imagePullSecrets:
         {{ toYaml .Values.global.image.pullSecrets | nindent 8 }}
       {{- end }}
-      {{- if .Values.slim.enabled }}
+      {{/* When the Universal eBPF is enforced by customer choice there is no reason to start the init container to build the driver */}}
+      {{- if and .Values.slim.enabled (not (include "agent.universalEbpfEnforced" . )) }}
       initContainers:
         - name: sysdig-agent-kmodule
           image: {{ template "agent.image.kmodule" . }}
@@ -94,6 +95,13 @@ spec:
           {{- if or (include "agent.ebpfEnabled" .) (include "agent.gke.autopilot" .) }}
             - name: SYSDIG_BPF_PROBE
               value:
+          {{- end }}
+          {{- if (include "agent.universalEbpfEnforced" .) }}
+            - name: SYSDIG_AGENT_DRIVER
+              value: universal_bpf
+          {{- else if (include "agent.legacyEbpfEnforced" .) }}
+            - name: SYSDIG_AGENT_DRIVER
+              value: legacy_bpf
           {{- end }}
           {{- range $key, $value := .Values.daemonset.kmodule.env }}
             - name: {{ $key | quote }}
@@ -178,9 +186,16 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: spec.nodeName
-            {{- if or (include "agent.ebpfEnabled" .) (include "agent.gke.autopilot" .)}}
+            {{- if and (or (include "agent.ebpfEnabled" .) (include "agent.gke.autopilot" .)) (not (include "agent.universalEbpfEnforced" . )) }}
             - name: SYSDIG_BPF_PROBE
               value:
+            {{- end }}
+            {{- if (include "agent.universalEbpfEnforced" .) }}
+            - name: SYSDIG_AGENT_DRIVER
+              value: universal_bpf
+            {{- else if (and (include "agent.ebpfEnabled" .) (eq "legacy" .Values.ebpf.kind )) }}
+            - name: SYSDIG_AGENT_DRIVER
+              value: legacy_bpf
             {{- end }}
             {{- if (.Values.proxy.httpProxy | default .Values.global.proxy.httpProxy) }}
             - name: http_proxy
