--- a/charts/agent/values.yaml
+++ b/charts/agent/values.yaml
@@ -169,6 +169,10 @@ priorityClassValue: 10
 ebpf:
   # Enable eBPF support for Sysdig Agent
   enabled: false
+
+  # Define the kind of eBPF driver that can be used in the agent. Can be `auto`, `legacy` or `universal`
+  kind: auto
+
 slim:
   # Uses a slim version of the Sysdig Agent
   enabled: true
